# signBridgeStorage

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  TROUBLESHOOTING.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  readme.md  start.sh  test_imports.py  test_main.http
alembic/: env.py
alembic/versions/: c5b5470dd042_initial_cms_migration.py
app/: config.py  main.py
app/api/: deps.py
app/api/v1/endpoints/: auth.py  cms.py  files.py  health.py
app/core/: logging.py  s3.py  security.py
app/db/: base.py  base_class.py  session.py
app/models/: cms.py  enums.py  schemas.py
app/utils/: validators.py  vrma_parser.py
frontend/: Dockerfile  app.js  index.html  nginx.conf  package-lock.json  package.json  styles.css  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: DynamicIsland.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/layouts/: MainLayout.jsx
frontend/src/pages/: Files.jsx  Glosses.jsx  Languages.jsx  Login.jsx  Search.jsx  UnifiedAdd.jsx  Variants.jsx  index.js  index.jsx
frontend_legacy/: app.js  index.html  styles.css
